--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,5 +11,7 @@
 </p>
 
 
+<%= raw render_disqus_javascript %>
+
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
