--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,17 +1,19 @@
-<p id="notice"><%= notice %></p>
+<div class ="container">
+  <p id="notice"><%= notice %></p>
+  <div class="content">
+    <div class="article">
+      <h2>
+      <%= @article.name %>
+      </h2>
 
-<p>
-  <b>Name:</b>
-  <%= @article.name %>
-</p>
-
-<p>
-  <b>Content:</b>
-  <%= @article.content %>
-</p>
-
-
-<%= raw render_disqus_javascript %>
-
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
+      <p>
+      <%= @article.content %>
+      </p>
+    </div>
+    <div class="comments">
+      <%= raw render_disqus_javascript %>
+    </div>
+  </div>
+  <%= link_to 'Edit', edit_article_path(@article) %> |
+  <%= link_to 'Back', articles_path %>
+</div>
