--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,11 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
+  <header></header>
 <body>
-
-<%= yield %>
-
+  <div class="page">
+    <%= yield %>
+  </div>
+  <footer></footer>
 </body>
 </html>
